[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/actors/objects/big_steely/texture.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/objects/big_steely/big_steely.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/objects/big_steely/heavy_body.gd" type="Script" id=3]
[ext_resource path="res://scenes/actors/objects/big_steely/break.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/actors/objects/big_steely/particles.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/mario/particles/dust.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.623077, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 5.5
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 637.5, 0 )
initial_velocity = 110.0
initial_velocity_random = 0.45
angular_velocity = 150.0
angular_velocity_random = 0.21
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=9]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 16.67
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
color_ramp = SubResource( 11 )
anim_speed = 1.0

[node name="BigSteely" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Steely" type="KinematicBody2D" parent="."]
collision_layer = 32
collision_mask = 33
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Steely"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Steely"]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Steely/Area2D"]
shape = SubResource( 2 )

[node name="BreakDetector" type="Area2D" parent="Steely"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Steely/BreakDetector"]
shape = SubResource( 3 )

[node name="PlatformDetector" type="Area2D" parent="Steely"]
collision_layer = 0
collision_mask = 2147483664

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Steely/PlatformDetector"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Steely"]
texture = ExtResource( 1 )

[node name="Check1" type="RayCast2D" parent="Steely"]
position = Vector2( -12, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Check2" type="RayCast2D" parent="Steely"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Steely"]
visible = false
rect = Rect2( -250, -250, 500, 500 )

[node name="BottomPos" type="Node2D" parent="Steely"]
position = Vector2( 0, 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Steely"]
stream = ExtResource( 4 )
volume_db = -8.5

[node name="BreakParticle" type="Particles2D" parent="Steely"]
material = SubResource( 5 )
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 5 )

[node name="DustParticle" type="Particles2D" parent="Steely"]
material = SubResource( 9 )
emitting = false
amount = 3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 12 )
texture = ExtResource( 6 )
